# SiEPIC_Bragg_workshop

./: CHANGELOG.md  README.md  example.py  examples.py
.github/: python-publish.yml
.github/workflows/: release.yml
bragg_gratings/layouts/: 01_bragg_doe.py
bragg_gratings/lumerical_fdtd_bloch/script_base/: Bragg_draw.lsf  Bragg_simulate.lsf  MAIN_Bandstructure.lsf
bragg_gratings/lumerical_mode_eme/: Bragg_analysis.lsf  Bragg_draw.lsf  Bragg_simulate.lsf  MAIN_EME.lsf
bragg_gratings/lumerical_waveguide_model/: waveguide_cml.lms  waveguide_cml.lsf
bragg_gratings/transfer_matrix_method/: bragg_tmm_object.py  bragg_tmm_object_1310.py  bragg_tmm_object_apodized_1310.py  profile_results.prof
bragg_gratings/transfer_matrix_method/wg_data/: visualize_neff.py  wg_variability_1310.txt  wg_variability_1550.txt
bragg_gratings/transfer_matrix_method/wg_variability_generator/: generate_wafer_map.py  waveguide_cml.lsf
contra_directional_couplers/: CHANGELOG.md  make_PyPI  pyproject.toml
contra_directional_couplers/auto_cmt_tmm/: ContraDC.py  ContraDC_sparams.mat  MAIN_EME.lsf  __init__.py  materials.lsf
contra_directional_couplers/auto_cmt_tmm/Tutorial/: examples.py
contra_directional_couplers/lumerical_mode_eme/: ContraDC_simulatemodes.lsf  MAIN_EME.lsf
contra_directional_couplers/lumerical_waveguides_model/: waveguide_coupler.lms  waveguide_coupler.lsf
contra_directional_couplers/siepic_contradc/: ContraDC.py  ContraDC_sparams.h5  lumerical_tools.py
contra_directional_couplers/siepic_contradc/Tutorial/: examples.py
layout_scripts/: doe_ebeam_bragg_te1550.py  layout_bragg.py
